--- a/src/20220428/WertUndReferenzTypen/WertUndReferenzTypen/WertUndReferenzTypen.csproj
+++ b/src/20220428/WertUndReferenzTypen/WertUndReferenzTypen/WertUndReferenzTypen.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{91CBAABA-C068-40A9-91AC-DE873892DAB3}</ProjectGuid>
+    <ProjectGuid>{2F4EF750-C808-404E-BAEF-9A5A94DEF601}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>BuchVerwaltung</RootNamespace>
-    <AssemblyName>BuchVerwaltung</AssemblyName>
+    <RootNamespace>WertUndReferenzTypen</RootNamespace>
+    <AssemblyName>WertUndReferenzTypen</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -33,9 +33,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="ConsoleTableExt, Version=3.1.8.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ConsoleTableExt.3.1.9\lib\net45\ConsoleTableExt.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
@@ -46,15 +43,12 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Book.cs" />
-    <Compile Include="BookEntity.cs" />
-    <Compile Include="BookGenre.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Punkt.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
-    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
