--- a/src/PlaylistGenerator-Bsp/PlaylistEditorSolution/PlaylistEditor.Repositories/PlaylistEditor.Repositories.csproj
+++ b/src/PlaylistGenerator-Bsp/PlaylistEditorSolution/PlaylistEditor.Repositories/PlaylistEditor.Repositories.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{739C236D-8454-427A-AB4C-D540680944E5}</ProjectGuid>
+    <ProjectGuid>{9835C293-208D-4E8F-90BC-7F261B3E510B}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PlaylistEditor.CoreTypes</RootNamespace>
-    <AssemblyName>PlaylistEditor.CoreTypes</AssemblyName>
+    <RootNamespace>PlaylistEditor.Repositories</RootNamespace>
+    <AssemblyName>PlaylistEditor.Repositories</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -31,9 +31,11 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="PlaylistsNET, Version=1.2.1.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\PlaylistsNET.1.2.1\lib\netstandard2.0\PlaylistsNET.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,13 +44,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IFileInfo.cs" />
-    <Compile Include="IPlaylist.cs" />
-    <Compile Include="IPlaylistItem.cs" />
-    <Compile Include="IPlaylistItemFactory.cs" />
-    <Compile Include="IRepository.cs" />
-    <Compile Include="Playlist.cs" />
+    <Compile Include="M3uRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PlaylistEditor.CoreTypes\PlaylistEditor.CoreTypes.csproj">
+      <Project>{739c236d-8454-427a-ab4c-d540680944e5}</Project>
+      <Name>PlaylistEditor.CoreTypes</Name>
+    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
