--- a/src/PlaylistGenerator-Bsp/PlaylistEditorSolution/PlaylistEditor.Factories/PlaylistEditor.Factories.csproj
+++ b/src/PlaylistGenerator-Bsp/PlaylistEditorSolution/PlaylistEditor.Factories/PlaylistEditor.Factories.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{739C236D-8454-427A-AB4C-D540680944E5}</ProjectGuid>
+    <ProjectGuid>{580C290A-5A58-4A5E-8C02-123722E01F99}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PlaylistEditor.CoreTypes</RootNamespace>
-    <AssemblyName>PlaylistEditor.CoreTypes</AssemblyName>
+    <RootNamespace>PlaylistEditor.Factories</RootNamespace>
+    <AssemblyName>PlaylistEditor.Factories</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -33,7 +33,6 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
@@ -42,14 +41,17 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="IFileInfo.cs" />
-    <Compile Include="IPlaylist.cs" />
-    <Compile Include="IPlaylistItem.cs" />
-    <Compile Include="IPlaylistItemFactory.cs" />
-    <Compile Include="IRepository.cs" />
-    <Compile Include="Playlist.cs" />
-    <Compile Include="PlaylistFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+  </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\PlaylistEditor.CoreTypes\PlaylistEditor.CoreTypes.csproj">
+      <Project>{739c236d-8454-427a-ab4c-d540680944e5}</Project>
+      <Name>PlaylistEditor.CoreTypes</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\PlaylistEditor.Repositories\PlaylistEditor.Repositories.csproj">
+      <Project>{9835c293-208d-4e8f-90bc-7f261b3e510b}</Project>
+      <Name>PlaylistEditor.Repositories</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
