--- a/src/PlaylistGenerator-Bsp/PlaylistEditorSolution/PlaylistEditor.Items/PlaylistEditor.Items.csproj
+++ b/src/PlaylistGenerator-Bsp/PlaylistEditorSolution/PlaylistEditor.Items/PlaylistEditor.Items.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{580C290A-5A58-4A5E-8C02-123722E01F99}</ProjectGuid>
+    <ProjectGuid>{C84D0139-D0FD-4E61-B880-F0B61CF9EB42}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>PlaylistEditor.Factories</RootNamespace>
-    <AssemblyName>PlaylistEditor.Factories</AssemblyName>
+    <RootNamespace>PlaylistEditor.Items</RootNamespace>
+    <AssemblyName>PlaylistEditor.Items</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <Deterministic>true</Deterministic>
@@ -33,31 +33,29 @@
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
+    <Reference Include="System.Drawing" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="TagLibSharp, Version=2.2.0.0, Culture=neutral, PublicKeyToken=db62eba44689b5b0, processorArchitecture=MSIL">
+      <HintPath>..\packages\TagLibSharp.2.2.0\lib\net45\TagLibSharp.dll</HintPath>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="PlaylistItemFactory.cs" />
+    <Compile Include="Mp3Item.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="RepositoryFactory.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\PlaylistEditor.CoreTypes\PlaylistEditor.CoreTypes.csproj">
       <Project>{739c236d-8454-427a-ab4c-d540680944e5}</Project>
       <Name>PlaylistEditor.CoreTypes</Name>
     </ProjectReference>
-    <ProjectReference Include="..\PlaylistEditor.Items\PlaylistEditor.Items.csproj">
-      <Project>{c84d0139-d0fd-4e61-b880-f0b61cf9eb42}</Project>
-      <Name>PlaylistEditor.Items</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\PlaylistEditor.Repositories\PlaylistEditor.Repositories.csproj">
-      <Project>{9835c293-208d-4e8f-90bc-7f261b3e510b}</Project>
-      <Name>PlaylistEditor.Repositories</Name>
-    </ProjectReference>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="packages.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
