--- a/src/PlaylistGenerator-Bsp/PlaylistEditorSolution/PlaylistEditor.CoreTypes/PlaylistEditor.CoreTypes.csproj
+++ b/src/PlaylistGenerator-Bsp/PlaylistEditorSolution/PlaylistEditor.CoreTypes/PlaylistEditor.CoreTypes.csproj
@@ -51,6 +51,7 @@
     <Compile Include="Playlist.cs" />
     <Compile Include="PlaylistFactory.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TimeSpanExtensions.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
